kubernetes/apps/httpbin/overlays/workload-prd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-httpbin
  hostnames:
    - "httpbin.yuriykovalchuk.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: httpbin-httpbingo
          port: 80
